--- a/liquidwar6/doc/Makefile.in
+++ b/liquidwar6/doc/Makefile.in
@@ -1189,43 +1189,43 @@ uninstall-local:
 @LW6_SELFDOC_TRUE@$(srcdir)/aliases-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
 @LW6_SELFDOC_TRUE@	echo selfdoc aliases && for k in `$(top_builddir)/src/liquidwar6 --list-aliases` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 cmd $$k ; done > $(srcdir)/aliases-selfdoc.texi
 
-@LW6_SELFDOC_TRUE@$(srcdir)/path-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+@LW6_SELFDOC_TRUE@$(srcdir)/path-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 @LW6_SELFDOC_TRUE@	echo selfdoc path && for k in `$(top_builddir)/src/liquidwar6 --list-path` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/path-selfdoc.texi
 
-@LW6_SELFDOC_TRUE@$(srcdir)/players-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+@LW6_SELFDOC_TRUE@$(srcdir)/players-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 @LW6_SELFDOC_TRUE@	echo selfdoc players && for k in `$(top_builddir)/src/liquidwar6 --list-players` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/players-selfdoc.texi
 
-@LW6_SELFDOC_TRUE@$(srcdir)/input-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+@LW6_SELFDOC_TRUE@$(srcdir)/input-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 @LW6_SELFDOC_TRUE@	echo selfdoc input && for k in `$(top_builddir)/src/liquidwar6 --list-input` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/input-selfdoc.texi
 
-@LW6_SELFDOC_TRUE@$(srcdir)/graphics-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+@LW6_SELFDOC_TRUE@$(srcdir)/graphics-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 @LW6_SELFDOC_TRUE@	echo selfdoc graphics && for k in `$(top_builddir)/src/liquidwar6 --list-graphics` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/graphics-selfdoc.texi
 
-@LW6_SELFDOC_TRUE@$(srcdir)/sound-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+@LW6_SELFDOC_TRUE@$(srcdir)/sound-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 @LW6_SELFDOC_TRUE@	echo selfdoc sound && for k in `$(top_builddir)/src/liquidwar6 --list-sound` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/sound-selfdoc.texi
 
-@LW6_SELFDOC_TRUE@$(srcdir)/network-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+@LW6_SELFDOC_TRUE@$(srcdir)/network-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 @LW6_SELFDOC_TRUE@	echo selfdoc network && for k in `$(top_builddir)/src/liquidwar6 --list-network` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/network-selfdoc.texi
 
-@LW6_SELFDOC_TRUE@$(srcdir)/map-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+@LW6_SELFDOC_TRUE@$(srcdir)/map-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 @LW6_SELFDOC_TRUE@	echo selfdoc map && for k in `$(top_builddir)/src/liquidwar6 --list-map` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/map-selfdoc.texi
 
-@LW6_SELFDOC_TRUE@$(srcdir)/map-rules-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+@LW6_SELFDOC_TRUE@$(srcdir)/map-rules-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 @LW6_SELFDOC_TRUE@	echo selfdoc map-rules && for k in `$(top_builddir)/src/liquidwar6 --list-map-rules` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/map-rules-selfdoc.texi
 
-@LW6_SELFDOC_TRUE@$(srcdir)/map-hints-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+@LW6_SELFDOC_TRUE@$(srcdir)/map-hints-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 @LW6_SELFDOC_TRUE@	echo selfdoc map-hints && for k in `$(top_builddir)/src/liquidwar6 --list-map-hints` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/map-hints-selfdoc.texi
 
-@LW6_SELFDOC_TRUE@$(srcdir)/map-style-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+@LW6_SELFDOC_TRUE@$(srcdir)/map-style-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 @LW6_SELFDOC_TRUE@	echo selfdoc map-style && for k in `$(top_builddir)/src/liquidwar6 --list-map-style` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/map-style-selfdoc.texi
 
-@LW6_SELFDOC_TRUE@$(srcdir)/map-teams-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+@LW6_SELFDOC_TRUE@$(srcdir)/map-teams-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 @LW6_SELFDOC_TRUE@	echo selfdoc map-teams && for k in `$(top_builddir)/src/liquidwar6 --list-map-teams` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/map-teams-selfdoc.texi
 
-@LW6_SELFDOC_TRUE@$(srcdir)/hooks-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+@LW6_SELFDOC_TRUE@$(srcdir)/hooks-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 @LW6_SELFDOC_TRUE@	echo selfdoc hooks && for k in `$(top_builddir)/src/liquidwar6 --list-hooks` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/hooks-selfdoc.texi
 
-@LW6_SELFDOC_TRUE@$(srcdir)/advanced-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+@LW6_SELFDOC_TRUE@$(srcdir)/advanced-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 @LW6_SELFDOC_TRUE@	echo selfdoc advanced && for k in `$(top_builddir)/src/liquidwar6 --list-advanced` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/advanced-selfdoc.texi
 
 @LW6_SELFDOC_TRUE@$(srcdir)/funcs-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
