--- a/liquidwar6/doc/Makefile.selfdoc
+++ b/liquidwar6/doc/Makefile.selfdoc
@@ -12,43 +12,43 @@ $(srcdir)/show-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
 $(srcdir)/aliases-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
 	echo selfdoc aliases && for k in `$(top_builddir)/src/liquidwar6 --list-aliases` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 cmd $$k ; done > $(srcdir)/aliases-selfdoc.texi
 
-$(srcdir)/path-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+$(srcdir)/path-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 	echo selfdoc path && for k in `$(top_builddir)/src/liquidwar6 --list-path` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/path-selfdoc.texi
 
-$(srcdir)/players-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+$(srcdir)/players-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 	echo selfdoc players && for k in `$(top_builddir)/src/liquidwar6 --list-players` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/players-selfdoc.texi
 
-$(srcdir)/input-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+$(srcdir)/input-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 	echo selfdoc input && for k in `$(top_builddir)/src/liquidwar6 --list-input` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/input-selfdoc.texi
 
-$(srcdir)/graphics-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+$(srcdir)/graphics-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 	echo selfdoc graphics && for k in `$(top_builddir)/src/liquidwar6 --list-graphics` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/graphics-selfdoc.texi
 
-$(srcdir)/sound-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+$(srcdir)/sound-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 	echo selfdoc sound && for k in `$(top_builddir)/src/liquidwar6 --list-sound` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/sound-selfdoc.texi
 
-$(srcdir)/network-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+$(srcdir)/network-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 	echo selfdoc network && for k in `$(top_builddir)/src/liquidwar6 --list-network` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/network-selfdoc.texi
 
-$(srcdir)/map-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+$(srcdir)/map-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 	echo selfdoc map && for k in `$(top_builddir)/src/liquidwar6 --list-map` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/map-selfdoc.texi
 
-$(srcdir)/map-rules-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+$(srcdir)/map-rules-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 	echo selfdoc map-rules && for k in `$(top_builddir)/src/liquidwar6 --list-map-rules` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/map-rules-selfdoc.texi
 
-$(srcdir)/map-hints-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+$(srcdir)/map-hints-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 	echo selfdoc map-hints && for k in `$(top_builddir)/src/liquidwar6 --list-map-hints` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/map-hints-selfdoc.texi
 
-$(srcdir)/map-style-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+$(srcdir)/map-style-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 	echo selfdoc map-style && for k in `$(top_builddir)/src/liquidwar6 --list-map-style` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/map-style-selfdoc.texi
 
-$(srcdir)/map-teams-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+$(srcdir)/map-teams-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 	echo selfdoc map-teams && for k in `$(top_builddir)/src/liquidwar6 --list-map-teams` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/map-teams-selfdoc.texi
 
-$(srcdir)/hooks-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+$(srcdir)/hooks-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 	echo selfdoc hooks && for k in `$(top_builddir)/src/liquidwar6 --list-hooks` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/hooks-selfdoc.texi
 
-$(srcdir)/advanced-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+$(srcdir)/advanced-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c $(top_srcdir)/src/lib/map/map.h $(top_srcdir)/src/lib/ldr/ldr.h
 	echo selfdoc advanced && for k in `$(top_builddir)/src/liquidwar6 --list-advanced` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/advanced-selfdoc.texi
 
 $(srcdir)/funcs-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
